Se agrego crud completo

--- a/RetoDony/Views/Shared/_Layout.cshtml
+++ b/RetoDony/Views/Shared/_Layout.cshtml
@@ -21,7 +21,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Usuarios", "MostrarUsuario", "Usuario")</li> 
+                    <li>@Html.ActionLink("Areas", "MostrarAreas", "Area")</li>
+                    <li>@Html.ActionLink("Cargos", "MostrarCargos", "Cargo")</li>
+                    <li>@Html.ActionLink("Usuarios", "MostrarUsuario", "Usuario")</li>
                 </ul>
             </div>
         </div>
