--- a/RetoDony/Views/Home/Index.cshtml
+++ b/RetoDony/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "TC#";
 }
 
-<h2>Index</h2>
+<div class="container text-center">
+    <h1 >Bienvenido a TC#</h1>
+</div>
+
 
