--- a/RetoDony/Views/Home/Index.cshtml
+++ b/RetoDony/Views/Home/Index.cshtml
@@ -1,10 +1,16 @@
 ﻿
 @{
-    ViewBag.Title = "TC#";
+    ViewBag.Title = "Inicio";
 }
 
 <div class="container text-center">
-    <h1 >Bienvenido a TC#</h1>
+    <img src="~/fonts/imagenes/Banner.png" alt="Banner TC#" width="auto" height="200">
+</div>
+<div class="container text-center">
+    <h1 class="text-uppercase " >Bienvenido a TC#</h1>
+    <p style=" font-size:medium ">Nuestra empresa TC# se enfoca a dar una administracion y optimizacion para
+    aquellos sofware que los clientes nos soliciten.     
+    </p>
 </div>
 
 
