--- a/RetoDony/Views/Usuario/Eliminar.cshtml
+++ b/RetoDony/Views/Usuario/Eliminar.cshtml
@@ -1,14 +1,13 @@
 ﻿@model RetoDony.Models.Entities.Usuario
 
 @{
-    ViewBag.Title = "Eliminar";
+    ViewBag.Title = "Empleado - Eliminar ";
 }
 
-<h2>Elimiinar</h2>
+<h2>Elimiinar Empleado</h2>
 
-<h3>¿Deseas eliminar este usuario?</h3>
-<div>
-    <h4>Usuario</h4>
+<h3>¿Deseas eliminar este empleado?</h3>
+<div>   
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,7 +19,31 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Telefono)
+            @Html.DisplayNameFor(model => model.Edad)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Edad)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Tipodocumento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tipodocumento)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Tipodocumento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Documento)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Documento)
         </dt>
 
         <dd>
@@ -43,21 +66,15 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Cargo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Cargo)
-        </dd>
 
     </dl>
 
     @using (Html.BeginForm()) {        
 
         <div class="form-actions no-color">
-            <input type="submit" value="Borrar" class="btn btn-default" /> |
-            @Html.ActionLink("Volver", "MostrarUsuario")
+            <input type="submit" value="Eliminar" class="btn btn-danger" /> 
+            
         </div>
+        <div class="btn btn-default">@Html.ActionLink("Volver", "MostrarUsuario")</div>
     }
 </div>
