--- a/RetoDony/Views/Area/Crear.cshtml
+++ b/RetoDony/Views/Area/Crear.cshtml
@@ -1,16 +1,16 @@
 ﻿@model RetoDony.Models.Entities.Area
 
 @{
-    ViewBag.Title = "Crear";
+    ViewBag.Title = "Areas - Crear";
 }
 
-<h2>Crear</h2>
+<h2>Crear Area</h2>
 
 @using (Html.BeginForm()) 
 {    
     
     <div class="form-horizontal">
-        <h4>Area</h4>
+        <h4>Area: </h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -23,12 +23,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Volver", "MostrarArea")
+<div class="btn bt">
+    @Html.ActionLink("Volver", "MostrarAreas")
 </div>
