--- a/RetoDony/Views/Area/Editar.cshtml
+++ b/RetoDony/Views/Area/Editar.cshtml
@@ -1,15 +1,15 @@
 ﻿@model RetoDony.Models.Entities.Area
 
 @{
-    ViewBag.Title = "Editar";
+    ViewBag.Title = "Areas - Editar";
 }
 
-<h2>Editar</h2>
+<h2>Editar Area</h2>
 
 @using (Html.BeginForm())
 {        
     <div class="form-horizontal">
-        <h4>Area</h4>
+        <h4>Area: </h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Idarea)
@@ -24,12 +24,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar" class="btn btn-default" />
+                <input type="submit" value="Guardar Cambio" class="btn btn-warning" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Volver", "MostrarArea")
+<div class="btn btn-default">
+    @Html.ActionLink("Volver", "MostrarAreas")
 </div>
