--- a/RetoDony/Views/Cargo/Editar.cshtml
+++ b/RetoDony/Views/Cargo/Editar.cshtml
@@ -1,44 +1,44 @@
 ﻿@model RetoDony.Models.Entities.Cargo
 
 @{
-    ViewBag.Title = "Editar";
+    ViewBag.Title = "Cargos - Editar";
+    List<SelectListItem> items = (List<SelectListItem>)ViewBag.items;
 }
 
-<h2>Editar</h2>
+<h2>Editar Cargo</h2>
 
 @using (Html.BeginForm())
 {
     
-    <div class="form-horizontal">
-        <h4>Cargo</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Idcargo)
+<div class="form-horizontal">
+    <h4>Cargo: </h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Idcargo)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Area, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Area, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Area, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar" class="btn btn-default" />
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Area, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("Area", items, "Seleccione el area", new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Area, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Guardar Cambios" class="btn btn-warning" />
+        </div>
+    </div>
+</div>
 }
 
-<div>
+<div class="btn btn-default">
     @Html.ActionLink("Volver", "MostrarCargos")
 </div>
