--- a/RetoDony/Views/Cargo/Eliminar.cshtml
+++ b/RetoDony/Views/Cargo/Eliminar.cshtml
@@ -1,22 +1,22 @@
 ﻿@model RetoDony.Models.Entities.Cargo
 
 @{
-    ViewBag.Title = "Eliminar";
+    ViewBag.Title = "Cargos - Eliminar";
 }
 
-<h2>Eliminar</h2>
+<h2>Eliminar Cargo</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Quieres eliminar este cargo?</h3>
 <div>
-    <h4>Cargo</h4>
+    <h4>Cargo: </h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Area)
+            @Html.DisplayNameFor(model => model.Idcargo)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Area)
+            @Html.DisplayFor(model => model.Idcargo)
         </dd>
 
         <dt>
@@ -26,15 +26,13 @@
         <dd>
             @Html.DisplayFor(model => model.Nombre)
         </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Volver", "MostrarCargos")
+            <input type="submit" value="Eliminar" class="btn btn-danger" /> 
+            <div class="btn btn-default" > @Html.ActionLink("Volver", "MostrarCargos")</div>
         </div>
     }
 </div>
