--- a/RetoDony/Views/Usuario/Detalle.cshtml
+++ b/RetoDony/Views/Usuario/Detalle.cshtml
@@ -1,13 +1,12 @@
 ﻿@model RetoDony.Models.Entities.Usuario
 
 @{
-    ViewBag.Title = "Detalle";
+    ViewBag.Title = "Empleado - Detalle";
 }
 
-<h2>Detalle</h2>
+<h2>Detalle Empleado</h2>
 
-<div>
-    <h4>Usuario</h4>
+<div>    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -16,6 +15,30 @@
 
         <dd>
             @Html.DisplayFor(model => model.Nombre)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Edad)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Edad)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Tipodocumento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tipodocumento)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Documento)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Documento)
         </dd>
 
         <dt>
@@ -42,17 +65,8 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Cargo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Cargo)
-        </dd>
-
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Editar", "Editar", new { id = Model.Idusuario }) |
-    @Html.ActionLink("Volver", "MostrarUsuario")
-</p>
+<div class="btn btn-default"> @Html.ActionLink("Editar Empleado", "Editar", new { id = Model.Idusuario }) </div>
+<div class="btn btn-default"> @Html.ActionLink("Volver", "MostrarUsuario") </div>
+
